Paths changed to local and settings.json modified

--- a/0_DataPreparation/Data_merging_and_initial_exploration.ipynb
+++ b/0_DataPreparation/Data_merging_and_initial_exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "id": "bc49b1e9",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "id": "ae40f43b",
    "metadata": {},
    "outputs": [
@@ -84,16 +84,13 @@
    ],
    "source": [
     "#Sales data\n",
-    "umsatzdaten_url = \"https://raw.githubusercontent.com/opencampus-sh/einfuehrung-in-data-science-und-ml/refs/heads/main/umsatzdaten_gekuerzt.csv\"\n",
-    "umsatzdaten = pd.read_csv(umsatzdaten_url)\n",
+    "umsatzdaten = pd.read_csv(\"Internal/umsatzdaten_gekuerzt.csv\")\n",
     "\n",
-    "#Weather data\n",
-    "wetter_url = \"https://raw.githubusercontent.com/opencampus-sh/einfuehrung-in-data-science-und-ml/refs/heads/main/wetter.csv\"\n",
-    "wetter =pd.read_csv(wetter_url)\n",
+    "# Weather data\n",
+    "wetter = pd.read_csv(\"Internal/wetter.csv\")\n",
     "\n",
-    "#Kieler woche data\n",
-    "kiwo_url = \"https://raw.githubusercontent.com/opencampus-sh/einfuehrung-in-data-science-und-ml/refs/heads/main/kiwo.csv\"\n",
-    "kiwo = pd.read_csv(kiwo_url)\n",
+    "# Kieler Woche data\n",
+    "kiwo = pd.read_csv(\"Internal/kiwo.csv\")\n",
     "\n",
     "# Ensure date format is consistent\n",
     "umsatzdaten[\"Datum\"] = pd.to_datetime(umsatzdaten[\"Datum\"])\n",
