First To Dos added

--- a/0_DataPreparation/documentation.ipynb
+++ b/0_DataPreparation/documentation.ipynb
@@ -4,6 +4,22 @@
    "cell_type": "markdown",
    "id": "8ab31af0",
    "metadata": {},
+   "source": [
+    "# Data Frame Shaping\n",
+    "\n",
+    "## To-Do's 15.05.2025\n",
+    "\n",
+    "Temperature Categorization - Konstantin\n",
+    "\n",
+    "Finding New Attributes, 3 missing days weather data fill - Anton\n",
+    "\n",
+    "Translate Weather Code into Attributes - Georgia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ce3fa72",
+   "metadata": {},
    "source": []
   }
  ],
